--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
 <header>
     <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="{{ url_for('home')}}" class="brand-logo">Logo</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Home</a></li>
+            <li><a href="{{ url_for('home')}}">Home</a></li>
             <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Log Out</a></li>
@@ -29,7 +29,7 @@
       </nav>
     
       <ul class="sidenav" id="mobile-demo">
-             <li><a href="#">Home</a></li>
+             <li><a href="{{ url_for('home')}}">Home</a></li>
             <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Log Out</a></li>
