--- a/templates/activities.html
+++ b/templates/activities.html
@@ -8,15 +8,15 @@
                 <div class="card-image">
                   <img src="{{ url_for('static',filename='images/hero1.jpg') }}">
                   <span class="card-title">{{ activity.activity_name }}</span>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red darken-3"><i class="material-icons">add</i></a>
+                  <a class="btn-floating halfway-fab waves-effect waves-light red darken-3"><i class="material-icons prefix">add</i></a>
                 </div>
                 <div class="card-content">
                     <p> 
-                        <i class="material-icons">list</i>{{ activity.category_type }}
+                        <i class="material-icons prefix">list</i>{{ activity.category_type }}
                     </p>
-                  <p><i class="material-icons">toys</i>{{ activity.necessities }}</p>
-                  <p><i class="material-icons">library_books</i>{{ activity.description }}</p>
-                  <p><i class="material-icons">school</i>{{ activity.activity_outcome }}</p>
+                  <p><i class="material-icons prefix">toys</i>{{ activity.necessities }}</p>
+                  <p><i class="material-icons prefix">library_books</i>{{ activity.description }}</p>
+                  <p><i class="material-icons prefix">school</i>{{ activity.activity_outcome }}</p>
                 </div>
               </div>
             </div>
