--- a/templates/base.html
+++ b/templates/base.html
@@ -16,35 +16,47 @@
 </head>
 <header>
     <nav>
-        <div class="nav-wrapper red darken-3">
-          <a href="{{ url_for('home')}}" class="brand-logo">
-            <img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" alt="Website Logo">
-          </a>
-          
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="{{ url_for('home')}}">Home</a></li>
-            <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="{{ url_for('register')}}">Register</a></li>
-          </ul>
-        </div>
+          <div class="nav-wrapper red darken-3">
+              <a href="{{ url_for('home')}}" class="brand-logo">
+                <img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" alt="Website Logo">
+              </a>
+              
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('home')}}">Home</a></li>
+                <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
+                <li><a href="{{ url_for('login')}}">Log In</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="{{ url_for('register')}}">Register</a></li>
+              </ul>
+          </div>
       </nav>
     
       <ul class="sidenav" id="mobile-demo">
              <li><a href="{{ url_for('home')}}">Home</a></li>
             <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login')}}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('register')}}">Register</a></li>
       </ul>
           
 </header>
 <body>
-    {% block content %}
+<!-- Displaying flash messages  -->
+    <section>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                  {% for message in messages %}
+                     <h4 class="center-align red darken-4"> {{ message }} </h4>
+                  {% endfor %}
+                {% endif %}
+            {% endwith %}
+    </section>
+    <main class="container"> 
+        {% block content %}
 
-    {% endblock %}
+        {% endblock %}
+    </main> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
