--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Register</h3>
+<h3 class="center-align">Log In</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register')}}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login')}}">
             <div class="card-panel">
                 <!-- Username input field -->
                 <div class="row">
@@ -21,19 +21,19 @@
                     </div>
                     <!-- Submit Button -->
                     <button class="col s12 btn-large waves-effect waves-light red darken-3" type="submit" name="action">
-                        Register
+                        Log In
                         <i class="material-icons">send</i>
                     </button>
                 </div>
             </div>
         </form>
     </div>
-    
+
 <div class="row">
     <div class="col s12">
         <p class="center-align">
-           Aready have registered account? 
-            <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Login here</a>
+            Do not have an account yet? 
+            <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register here</a>
         </p>
     </div>
 </div>
