--- a/templates/base.html
+++ b/templates/base.html
@@ -24,20 +24,26 @@
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home')}}">Home</a></li>
-                <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
-                <li><a href="{{ url_for('login')}}">Log In</a></li>
-                <li><a href="#">Log Out</a></li>
-                <li><a href="{{ url_for('register')}}">Register</a></li>
+                {% if session.client %}
+                    <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
+                    <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login')}}">Log In</a></li>
+                    <li><a href="{{ url_for('register')}}">Register</a></li>
+                {% endif %}
               </ul>
           </div>
       </nav>
     
       <ul class="sidenav" id="mobile-demo">
-             <li><a href="{{ url_for('home')}}">Home</a></li>
+        <li><a href="{{ url_for('home')}}">Home</a></li>
+        {% if session.client %}
             <li><a href="{{ url_for('get_activities')}}">Activities</a></li>
+            <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+        {% else %}
             <li><a href="{{ url_for('login')}}">Log In</a></li>
-            <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('register')}}">Register</a></li>
+        {% endif %}
       </ul>
           
 </header>
