--- a/templates/login.html
+++ b/templates/login.html
@@ -10,13 +10,13 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" required>
-                        <label for="username"><i class="material-icons prefix">person_add</i></label>
+                        <label for="username"><i class="material-icons">person_add</i></label>
                     </div>
                     <!-- Password input field -->
                     <div class="row">
                         <div class="input-field col s12">
                             <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" required>
-                            <label for="password"> <i class="material-icons prefix">lock</i> </label>
+                            <label for="password"> <i class="material-icons">lock</i> </label>
                         </div>
                     </div>
                     <!-- Submit Button -->
