Add text content to home page

--- a/templates/activities.html
+++ b/templates/activities.html
@@ -4,7 +4,7 @@
     
         <div class="row">
             <div class="col s12 m4">
-              <div class="card">
+              <div class="card hoverable">
                 <div class="card-image">
                   <img src="{{ url_for('static',filename='images/hero1.jpg') }}">
                   <span class="card-title">{{ activity.activity_name }}</span>
