--- a/templates/index.html
+++ b/templates/index.html
@@ -6,32 +6,41 @@
         <img src="{{ url_for('static',filename='images/hero1.jpg') }}">
          <!-- https://www.pexels.com/photo/children-doing-arts-and-crafts-at-school-8612992/ image -->
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h4><blockquote>"The goal of early chilhood education
+          should be to activate the child's own natural desire to learn"</blockquote></h4>
+          <h5 class="light grey-text text-lighten-3"><em>Maria Montessori</em></h5>
         </div>
       </li>
       <li>
         <img src="{{ url_for('static',filename='images/hero2.jpg') }}">
          <!-- https://www.pexels.com/photo/boy-in-blue-long-sleeve-shirt-and-denim-shorts-playing-with-wooden-toy-cars-8612955/ image -->
         <div class="caption left-align">
-          <h3>Left Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>Importance of play in early chilhood</h3>
+          <h5 class="light grey-text text-lighten-3">
+            Benefits of play at an early age and appropriate activities.
+          </h5>
         </div>
       </li>
       <li>
         <img src="{{ url_for('static',filename='images/hero3.jpg') }}">
          <!-- https://www.pexels.com/photo/sea-sunny-beach-vacation-7862529/ image -->
         <div class="caption right-align">
-          <h3>Right Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>Pre-school at Home</h3>
+          <h5 class="light grey-text text-lighten-3">
+            Pre-school at Home Hub provides a range of activities to support
+            and encourag children's interests.
+          </h5>
+          <a href="https://first5.gov.ie/parents/pre-school-at-home" target="_blank">See link here</a>
         </div>
       </li>
       <li>
         <img src="{{ url_for('static',filename='images/hero4.jpg') }}">
          <!-- https://www.pexels.com/photo/little-kid-playing-with-plastic-shovel-and-car-in-yard-5623742/ -->
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>Natural enviroment as a source of learning</h3>
+          <h5 class="light grey-text text-lighten-3">
+            Benefits of natural enviroment and outdoor experiences for holistic child's developement.
+          </h5>
         </div>
       </li>
     </ul>
