--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 {% endif %}
             {% endwith %}
     </section>
-    <main class="container"> 
+    <main> 
         {% block content %}
 
         {% endblock %}
