--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,14 @@
 
 <h3 class="center-align">Log In</h3>
 
-    <div class="row">
+    <div class="row" id="bg-image">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login')}}">
             <div class="card-panel">
                 <!-- Username input field -->
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" required>
-                        <label for="username"><i class="material-icons">person_add</i></label>
+                        <label for="username"><i class="material-icons">adb</i></label>
                     </div>
                     <!-- Password input field -->
                     <div class="row">
