--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
+
+    <div class="row col s12">
+      <h3>Add Activity</h3>
+      <a class="btn-floating btn-large waves-effect waves-light red darken-4" href="{{ url_for('upload')}}"><i
+          class="material-icons">add</i></a>
+    </div>
 {% for activity in activities %}
-<div class="row col s12">
-  <h3>Add Activity</h3>
-  <a class="btn-floating btn-large waves-effect waves-light red darken-4" href="{{ url_for('upload')}}"><i
-      class="material-icons">add</i></a>
-</div>
+
 
     <div class="row">
-      <div class="col s12 m6">
+      <div class="col s6 offset-m3">
         <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
             <img class="activator" src="{{ activity.image_url }}">
@@ -25,6 +27,7 @@
             <p><i class="material-icons prefix">toys</i>{{ activity.necessities }}</p>
             <p><i class="material-icons prefix">library_books</i>{{ activity.description }}</p>
             <p><i class="material-icons prefix">school</i>{{ activity.activity_outcome }}</p>
+            <p>{{ activity.uploaded_by }}</p>
           </div>
         </div>
       </div>
