--- a/templates/upload.html
+++ b/templates/upload.html
@@ -26,14 +26,14 @@
           <!-- Activity nescessities inputs -->
               <div class="row">
                   <div class="input-field col s6">
-                    <textarea id="necessities" name="necessities" class="materialize-textarea validate" required></textarea>
+                    <textarea id="necessities" name="necessities" type="text" class="materialize-textarea validate" required></textarea>
                     <label for="necessities">e.g. toys,bowls,crayons</label>
                   </div>
               </div>
               <!-- Activity description inputs -->
               <div class="row">
                 <div class="input-field col s6">
-                  <textarea id="description" name="description" class="materialize-textarea validate" required></textarea>
+                  <textarea id="description" name="description" type="text"class="materialize-textarea validate" required></textarea>
                   <label for="description">Activity description</label>
                 </div>
               </div>
@@ -47,12 +47,12 @@
               <!-- Image URL input -->
               <div class="row">
                 <div class="input-field col s6">
-                  <input placeholder="Image URL" id="image_url" name="activity_name" type="url" class="validate">
+                  <input placeholder="Image URL" id="" name="image_url" type="url" class="validate">
                   <label for="image_url">Image URL</label>
                 </div>
             </div>
           <div class="row">
-              <button class="btn waves-effect waves-light red darken-4" type="submit" name="action">Add Activity
+              <button class="btn waves-effect waves-light red darken-4">Add Activity
                 <i class="material-icons right">send</i>
               </button>
           </div>
