--- a/templates/activities.html
+++ b/templates/activities.html
@@ -5,32 +5,31 @@
       <h3>Add Activity</h3>
       <a class="btn-floating btn-large waves-effect waves-light red darken-4" href="{{ url_for('upload')}}"><i
           class="material-icons">add</i></a>
-    </div>
-{% for activity in activities %}
-
-
+ {% for activity in activities %}
     <div class="row">
-      <div class="col s6 offset-m3">
-        <div class="card hoverable">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ activity.image_url }}">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
-                class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
-                class="material-icons right">close</i></span>
-            <p><i class="material-icons prefix">list</i>{{ activity.category_type }}</p>
-            <p><i class="material-icons prefix">toys</i>{{ activity.necessities }}</p>
-            <p><i class="material-icons prefix">library_books</i>{{ activity.description }}</p>
-            <p><i class="material-icons prefix">school</i>{{ activity.activity_outcome }}</p>
-            <p>{{ activity.uploaded_by }}</p>
+        <div class="col s12 m6 l4">
+          <div class="card hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="{{ activity.image_url }}">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
+                  class="material-icons right">more_vert</i></span>
+              <p><a href="#">Learn More</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
+                  class="material-icons right">close</i></span>
+              <p><i class="material-icons prefix red-text tex-darken-3 left">list</i>{{ activity.category_type }}</p>
+              <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ activity.necessities }}</p>
+              <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{ activity.description }}</p>
+              <p><i class="material-icons prefix red-text tex-darken-3 left">school</i>{{ activity.activity_outcome }}</p>
+              <p><em>by: {{ activity.uploaded_by }}</em></p>
+              <a href="" class="waves-effect waves-light red darken-4 btn">Remove</a>
+              <a href="{{ url_for('update_activity', activity_id=activity._id)}}" class="waves-effect waves-light btn">Update</a>
+            </div>
           </div>
         </div>
-      </div>
     </div>
    
 {% endfor %}
