--- a/templates/login.html
+++ b/templates/login.html
@@ -10,19 +10,19 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" required>
-                        <label for="username"><i class="material-icons">adb</i></label>
+                        <label for="username"><i class="material-icons">person</i></label>
                     </div>
                     <!-- Password input field -->
                     <div class="row">
                         <div class="input-field col s12">
                             <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" required>
-                            <label for="password"> <i class="material-icons">lock</i> </label>
+                            <label for="password"> <i class="material-icons">password</i> </label>
                         </div>
                     </div>
                     <!-- Submit Button -->
                     <button class="col s12 btn-large waves-effect waves-light red darken-3" type="submit" name="action">
                         Log In
-                        <i class="material-icons">send</i>
+                        <i class="material-icons">login</i>
                     </button>
                 </div>
             </div>
