--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
 <div class="row">
     <form action="{{ url_for('upload')}}" method="POST" class="col s12 offset-m3">
       <div class="row">
-        <div class="input-field col s6">
+        <div class="input-field col s12">
           <select id="category_type" name="category_type" class="validate" required>
             <option value="" selected>Select Activity Category</option>
               {% for category in categories %}
@@ -18,42 +18,46 @@
       </div> 
       <!-- Activity name inputs -->
       <div class="row">
-          <div class="input-field col s6">
-              <input placeholder="Activity Name" id="activity_name" name="activity_name" type="text" class="validate">
+          <div class="input-field col s12">
+              <input placeholder="Activity Name" id="activity_name" name="activity_name" type="text" class="validate" required>
               <label for="activity_name">Activity Name</label>
             </div>
       </div>    
           <!-- Activity nescessities inputs -->
               <div class="row">
-                  <div class="input-field col s6">
-                    <textarea id="necessities" name="necessities" type="text" class="materialize-textarea validate" required></textarea>
-                    <label for="necessities">e.g. toys,bowls,crayons</label>
+                  <div class="input-field col s12">
+                    <textarea id="necessities" placeholder="e.g. toys,bowls,crayons" name="necessities" type="text" class="materialize-textarea validate" required></textarea>
+                    <label for="necessities">Activity Necessities</label>
                   </div>
               </div>
               <!-- Activity description inputs -->
               <div class="row">
-                <div class="input-field col s6">
-                  <textarea id="description" name="description" type="text"class="materialize-textarea validate" required></textarea>
+                <div class="input-field col s12">
+                  <textarea id="description"  placeholder="Activity Description" name="description" type="text"class="materialize-textarea validate" required></textarea>
                   <label for="description">Activity description</label>
                 </div>
               </div>
               <!-- Activity outcome inputs -->
               <div class="row">
-                <div class="input-field col s6">
-                  <textarea id="activity_outcome" name="activity_outcome" class="materialize-textarea validate" required ></textarea>
+                <div class="input-field col s12">
+                  <textarea id="activity_outcome"  placeholder="Activity Outcome" name="activity_outcome" class="materialize-textarea validate" required ></textarea>
                   <label for="activity_outcome">Activity outcome</label>
                 </div>
               </div>
               <!-- Image URL input -->
               <div class="row">
-                <div class="input-field col s6">
-                  <input placeholder="Image URL" id="" name="image_url" type="url" class="validate">
+                <div class="input-field col s12">
+                  <input placeholder="Image URL" id="image_url" name="image_url" type="url" class="validate">
                   <label for="image_url">Image URL</label>
                 </div>
             </div>
           <div class="row">
-              <button class="btn waves-effect waves-light red darken-4">Add Activity
-                <i class="material-icons right">send</i>
+                <a class="btn waves-effect waves-light red darken-4" href="{{ url_for('get_activities')}}">
+                    <i class="material-icons right">cancel</i>
+                    Cancel
+                </a>
+              <button class="btn waves-effect waves-light">Add Activity
+                <i class="material-icons right">add_box</i>
               </button>
           </div>
     </form>
