--- a/templates/activities.html
+++ b/templates/activities.html
@@ -6,6 +6,7 @@
   <a class="btn-floating btn-large waves-effect waves-light pulse red darken-4" href="{{ url_for('upload')}}">
     <i class="material-icons">add</i></a>
 </div>
+
 {% for activity in activities %}
 <div class="container">
   <div class="section">
@@ -32,10 +33,25 @@
               </p>
               <p><em>by: {{ activity.uploaded_by }}</em></p>
               {% if session.client|lower == activity.uploaded_by|lower %}
-                    <a href="" class="waves-effect waves-light red darken-4 btn">Remove</a>
-                    <a href="{{ url_for('update_activity', activity_id=activity._id)}}"
-                      class="waves-effect waves-light btn">Update</a>
-                {% endif %}
+              <!-- Modal Structure -->
+              <div id="{{ activity._id }}" class="modal">
+                <div class="modal-content">
+                  <h4>Are you sure you want to delete activity?</h4>
+                  <p>Activity will be deleted permanently.</p>
+                </div>
+                <div class="modal-footer">
+                  <a href="{{ url_for('remove_activity', activity_id=activity._id) }}"
+                    class="modal-close waves-effect waves-green btn-flat"> Delete</a>
+                    
+                    <a href="{{ url_for('get_activities') }}"
+                    class="modal-close waves-effect waves-green btn-flat"> Do not Delete</a>
+                </div>
+              </div>
+              <!-- END OF Modal Structure -->
+              <a href="#{{ activity._id }}" class="modal-trigger waves-effect waves-light btn">Remove</a>
+              <a href="{{ url_for('update_activity', activity_id=activity._id) }}"
+                class="waves-effect waves-light btn">Update</a>
+              {% endif %}
             </div>
           </div>
         </div>
