--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,11 @@
+body {
+    background-color: #ffc0cb7a;
+    font-family: 'Coda Caption', sans-serif;
+}
 .logo {
     height: 55px;
     width: 55px;
 }
-.custom-icons {
-    font-size: 18px!important;
-}
-
 .caption {
     background-color: rgb(232,14,14,0.6);
 }
@@ -14,12 +14,16 @@
     line-height: 90%!important;
 }
 .nav-icons {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
 }
 .card-panel {
     border-radius: 75px;
     background-color: #d9e61357;
+}
+.card {
+    border-radius: 70px;
+    background-color: #f3c5c5;
 }
 .btn-large {
     border-radius: 32px;
@@ -30,7 +34,20 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-
+#city {
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+}
 nav ul a {
-font-size: 2rem!important;
+font-size: 1.5rem!important;
+}
+.card .card-image img  { 
+    height: 18.75rem;
+    border-bottom-left-radius: 69px;
+    border-end-start-radius: 100px;
+    box-shadow: -9px 2px 4px #c1a8ad;
+    border-start-start-radius: 32px;
+    border-top-right-radius: 74px;
 }
