--- a/templates/activities.html
+++ b/templates/activities.html
@@ -7,57 +7,61 @@
     <i class="material-icons">add</i></a>
 </div>
 
-{% for activity in activities %}
 <div class="container">
   <div class="section">
-    <div class="col s12">
-      <div class="row">
-        <div class="col s12 m6 l6 offset-l3">
-          <div class="card hoverable">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="{{ activity.image_url }}">
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
-                  class="material-icons right">more_vert</i></span>
-              <p><a href="#">Learn More</a></p>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
-                  class="material-icons right">close</i></span>
-              <p><i class="material-icons prefix red-text tex-darken-3 left">list</i>{{ activity.category_type }}</p>
-              <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ activity.necessities }}</p>
-              <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{ activity.description }}
-              </p>
-              <p><i class="material-icons prefix red-text tex-darken-3 left">school</i>{{ activity.activity_outcome }}
-              </p>
-              <p><em>by: {{ activity.uploaded_by }}</em></p>
-              {% if session.client|lower == activity.uploaded_by|lower %}
-              <!-- Modal Structure -->
-              <div id="{{ activity._id }}" class="modal">
-                <div class="modal-content">
-                  <h4>Are you sure you want to delete activity?</h4>
-                  <p>Activity will be deleted permanently.</p>
-                </div>
-                <div class="modal-footer">
-                  <a href="{{ url_for('remove_activity', activity_id=activity._id) }}"
-                    class="modal-close waves-effect waves-green btn-flat"> Delete</a>
-                    
-                    <a href="{{ url_for('get_activities') }}"
-                    class="modal-close waves-effect waves-green btn-flat"> Do not Delete</a>
-                </div>
-              </div>
-              <!-- END OF Modal Structure -->
-              <a href="#{{ activity._id }}" class="modal-trigger waves-effect waves-light btn">Remove</a>
-              <a href="{{ url_for('update_activity', activity_id=activity._id) }}"
-                class="waves-effect waves-light btn">Update</a>
+    <div class="row">
+      {% for activity in activities %}
+      <div class="col s12 m6 l4">
+        <div class="card hoverable">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="{{ activity.image_url }}">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
+                class="material-icons right">more_vert</i></span>
+            <p><a href="#">Learn More</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
+                class="material-icons right">close</i></span>
+            <p><i class="material-icons prefix red-text tex-darken-3 left">list</i>{{ activity.category_type }}
+            </p>
+            <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ activity.necessities }}
+            </p>
+            <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{
+              activity.description }}
+            </p>
+            <p><i class="material-icons prefix red-text tex-darken-3 left">school</i>{{ activity.activity_outcome
+              }}
+            </p>
+            <p><em>by: {{ activity.uploaded_by }}</em></p>
+
+            {% if session.client|lower == activity.uploaded_by|lower %}
+            <a href="#{{ activity._id }}" class="modal-trigger waves-effect waves-light btn red tex-darken-3">Remove</a>
+            <a href="{{ url_for('update_activity', activity_id=activity._id) }}"
+              class="waves-effect waves-light btn">Update</a>
               {% endif %}
+            <!-- Modal Structure -->
+            <div id="{{ activity._id }}" class="modal">
+              <div class="modal-content">
+                <h4>Are you sure you want to delete activity?</h4>
+                <p>Activity will be deleted permanently.</p>
+              </div>
+              <div class="modal-footer">
+                <a href="{{ url_for('remove_activity', activity_id=activity._id) }}"
+                  class="modal-close waves-effect waves-green btn-flat"> Delete</a>
+                <a href="{{ url_for('get_activities') }}" class="modal-close waves-effect waves-green btn-flat">
+                  Do not Delete</a>
+              </div>
             </div>
+            <!-- END OF Modal Structure -->
           </div>
         </div>
       </div>
+      {% endfor %}
     </div>
   </div>
 </div>
-{% endfor %}
+
+
 {% endblock %}
