--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,52 +1,53 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Hi {{ username }}, welcome to your profile!</h3>
+<h3 class="center-align flash-msg">Hi {{ username }}, welcome to your profile!</h3>
 
 
 <div class="container">
     <div class="section">
         <div class="row">
-            {% for activity in activities %}
-            
-            {% if session.client|lower == activity.uploaded_by|lower %}
+            {% for upload in uploads  %}
+            {% if session.client|lower == upload.uploaded_by|lower %}
             <div class="col s12 m6 l4">
                 <div class="card hoverable">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{ activity.image_url }}">
+                        <img class="activator" src="{{ upload.image_url }}">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
+                        <span class="card-title activator grey-text text-darken-4">{{ upload.activity_name }}<i
                                 class="material-icons right">more_vert</i></span>
                         <p><a href="#">Learn More</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
+                        <span class="card-title grey-text text-darken-4">{{ upload.activity_name }}<i
                                 class="material-icons right">close</i></span>
-                        <p><i class="material-icons prefix red-text tex-darken-3 left">list</i>{{ activity.category_type
+                        <p><i class="material-icons prefix red-text tex-darken-3 left">list</i>{{ upload.category_type
                             }}
                         </p>
-                        <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ activity.necessities
+                        <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ upload.necessities
                             }}
                         </p>
-                        <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{activity.description
+                        <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{ upload.description
                             }}
                         </p>
                         <p><i class="material-icons prefix red-text tex-darken-3 left">school</i>{{
-                            activity.activity_outcome }}
+                            upload.activity_outcome }}
                         </p>
-                        <p><em>by: {{ activity.uploaded_by }}</em></p>
-                        <a href="#{{ activity._id }}"
+                        <p><em>by: {{ upload.uploaded_by }}</em></p>
+                        <a href="#{{ upload_id }}"
                             class="modal-trigger waves-effect waves-light btn red tex-darken-3">Remove</a>
-                        <a href="{{ url_for('update_activity', activity_id=activity._id) }}"
+                        <a href="{{ url_for('update_activity', activity_id=upload._id) }}"
                             class="waves-effect waves-light btn">Update</a>
-                        {% endif %}
+                        
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
 </div>
+
 
 {% endblock %}
