--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,3 +51,7 @@ font-size: 1.5rem!important;
     border-start-start-radius: 32px;
     border-top-right-radius: 74px;
 }
+.flash-msg {
+    text-transform: capitalize;
+    color: #0171c0;
+}
